[package]
name = "tensha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
wiremock = "0.6.0"
async-trait = "0.1.80"
mockall = "0.12.1"
anyhow = "1.0.83"
futures = "0.3.30"
dotenv = "0.15.0"
